# firstPhysicsEngineSFML

./: CMakeLists.txt  README.md
inc/configuration/: configuration.hpp
inc/renderer/: renderer.hpp
inc/solver/: solver.hpp
inc/utils/: math.hpp  number_generator.hpp
src/: events.cpp  main.cpp  solver.cpp
